fix(storefront): break words on mobile (#3011)

--- a/apps/storefront/components/MdxContent/MdxContent.module.css
+++ b/apps/storefront/components/MdxContent/MdxContent.module.css
@@ -1,4 +1,6 @@
 .content {
+  width: 100%;
+
   & > *:first-child {
     margin-top: 0;
   }
@@ -72,10 +74,17 @@
     opacity: 1;
   }
 
+  & > ul,
+  & > ol {
+    max-width: 100%;
+    padding-left: var(--ds-size-5);
+    box-sizing: border-box;
+  }
+
   & > ul > li,
   & > ol > li {
-    font: var(--ds-typography-paragraph-md);
     line-height: 1.9em;
+    word-break: break-word; /* Add this to prevent text from overflowing */
   }
 
   & > ul > li > ol,
